--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
 body {
-  margin: 0;
+    margin: 0;
+    font-family: 'Pangaia', serif;
+
+
+}
+
+.vh {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+}
+
+* {
+
+    box-sizing: border-box;
 }
